kubernetes/minikube/psql-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-test
spec:
  selector:
    matchLabels:
      app: psql-test
  replicas: 1 #Change this number if needed. Replicas = number of instances.
  template:
    metadata:
      labels:
        app: psql-test
    spec:
      containers:
      - name: psql-test
        image: trading-psql:1.0
        imagePullPolicy: Never
        ports:
        - containerPort: 5432
