kubernetes/minikube/springboot-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-test #Put deployment name here
spec:
  selector:
    matchLabels:
      app: springboot-test #Put app name here
  replicas: 3 #Change this number if needed. Replicas = number of instances.
  template:
    metadata:
      labels:
        app: springboot-test #Put app name here, should match above.
    spec:
      containers:
      - name: springboot-test #Name of the container, should be unique among containers in deployment
        image: trading-app-react:1.0 #Docker image to use, tag a specific version.
        ports:
        - containerPort: 8080 #Port number used by the container
