kubernetes/minikube/psql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: psql-service
  labels:
    app: psql-service
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    app: psql-test
