kubernetes/minikube/springboot-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot-service
  labels:
    app: springboot-service
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: springboot-test
